# inventree-spoolman-plugin

./: pyproject.toml
inventree_spoolman_plugin/: __init__.py  cli.py  spoolman.py
tests/: test_inventree_spoolman_plugin.py
