[project]
name = "inventree-spoolman-plugin"
version = "0.1"
description = ""
readme = "README.md"
authors = [{name = ""}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]

[project.entry-points."inventree_plugins"]
inventree-spoolman-plugin = "inventree_spoolman_plugin.SpoolmanPlugin"

[project.optional-dependencies]
test = ["pytest"]
