[project]
name = "inventree-spoolman-plugin"
version = "0.1"
description = ""
readme = "README.md"
authors = [{name = ""}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]

[project.entry-points."inventree_plugins"]
inventree-spoolman-plugin = "inventree_spoolman_plugin:spoolman.SpoolmanPlugin"

[project.optional-dependencies]
test = ["pytest"]

[tool.isort]
line_length = 96
lines_after_imports = 1
multi_line_output = 5
combine_as_imports = true
combine_straight_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "INVENTREE", "FIRSTPARTY", "LOCALFOLDER"]
known_inventree = ["company", "order", "part"]
known_firstparty = ["plugin"]
